--- a/src/layouts/main.hbs
+++ b/src/layouts/main.hbs
@@ -22,8 +22,8 @@
         <!-- menu items that get hidden below 768px width -->
         <div class='nav-collapse collapse navbar-responsive-collapse'>
           <ul class='nav navbar-nav pull-right'>
-            <li><a href='en/{{ current }}/apidoc'>Docs</a></li><!-- TODO: link to doc root instead of API docs -->
-            <li><a href='en/{{ current }}/examples'>Examples</a></li>
+            <li><a href='/en/{{ latest }}/doc'>Docs</a></li>
+            <li><a href='/en/{{ latest }}/examples'>Examples</a></li>
             <li><a href='https://github.com/openlayers/ol3'>Code</a></li>
           </ul>
         </div>
