--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -14,7 +14,7 @@ head:
   <div class='row'>
     <div id='news' class='col-12'>
       <h1 class='topic'><i class='icon-rss'></i> Latest</h1>
-      <p>We're hard at work toward a final release of 3.0.0.  In the meantime, we're churning out regular alhpa releases to mark our progress.  OpenLayers <a href='https://github.com/openlayers/ol3/releases/tag/r3.0.0-alpha.4'>r3.0.0-alpha4</a> is the lastest.  Read more about it on <a href='http://openlayers.org/blog/2013/07/29/openlayers-r3-0-0-alpha-4/'>the blog</a>.</p>
+      <p>We're hard at work toward a final release of 3.0.0.  In the meantime, we're churning out regular beta releases to mark our progress.  OpenLayers <a href='https://github.com/openlayers/ol3/releases/tag/v3.0.0-beta.1'>v3.0.0-beta.1</a> is the lastest.</p>
     </div>
   </div>
   <div class='row'>
