--- a/src/theme/site.less
+++ b/src/theme/site.less
@@ -137,6 +137,9 @@ body {
   color: white;
 }
 .navbar-toggle {
+  background-color: transparent;
+}
+.navbar-toggle .icon-bar {
   background-color: white;
 }
 .navbar-brand {
