Hide map navigation elements until mouseover
With openlayers/ol3@caf958826da8ac652137ac78f44998936c798e15 the class name for the overlay container changed.  This makes our CSS target the new class name.

--- a/src/theme/index.less
+++ b/src/theme/index.less
@@ -38,11 +38,11 @@ img.thumb {
 
 /* ol customizations */
 
-.ol-overlaycontainer {
+.ol-overlaycontainer-stopevent {
   opacity: 0;
   .transition(opacity 300ms ease);
 }
 /* not done with :hover because the overlay blocks events and has no height */
-.over .ol-overlaycontainer {
+.over .ol-overlaycontainer-stopevent {
   opacity: 1;
 }
