--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -12,13 +12,13 @@ head:
     <p>A high-performance, feature-packed library for all your mapping needs.</p>
   </blockquote>
   <div class='row'>
-    <div id='news' class='col-12'>
+    <div id='news' class='col-sm-12'>
       <h1 class='topic'><i class='icon-rss'></i> Latest</h1>
       <p>We're hard at work toward a final release of 3.0.0.  In the meantime, we're churning out regular beta releases to mark our progress.  OpenLayers <a href='https://github.com/openlayers/ol3/releases/tag/v3.0.0-beta.1'>v3.0.0-beta.1</a> is the lastest.</p>
     </div>
   </div>
   <div class='row'>
-    <h1 class='topic col-12'>Features</h1>
+    <h1 class='topic col-sm-12'>Features</h1>
   </div>
   <div class='row'>
     <div class='col-sm-6'>
@@ -45,7 +45,7 @@ head:
     </div>
   </div>
   <div class='row'>
-    <h1 class='topic col-12'>Learn More</h1>
+    <h1 class='topic col-sm-12'>Learn More</h1>
   </div>
   <div class='row'>
     <div class='col-sm-6'>
@@ -76,7 +76,7 @@ head:
     </div>
   </div>
   <div class='row'>
-    <h1 class='topic col-12'>Get Involved</h1>
+    <h1 class='topic col-sm-12'>Get Involved</h1>
   </div>
   <div class='row'>
     <div class='col-sm-4'>
