Fix ol.css path

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -2,7 +2,7 @@
 title: 'Welcome'
 layout: main.hbs
 head:
- - <link rel="stylesheet" href="en/<%= latest %>/build/ol.css" type="text/css">
+ - <link rel="stylesheet" href="en/<%= latest %>/css/ol.css" type="text/css">
  - <link rel="stylesheet" href="<%= assets %>/theme/index.css" type="text/css">
 ---
 
