Add role attribute
This is just to trigger another build of the site.

--- a/src/layouts/main.hbs
+++ b/src/layouts/main.hbs
@@ -10,7 +10,7 @@
     {{/each}}
   </head>
   <body>
-    <header class='navbar navbar-fixed-top'>
+    <header class='navbar navbar-fixed-top' role='navigation'>
       <div class='container'>
 
         <!-- button that shows up below 768px width -->
